# ask-my-docs

./: .env.example  .gitignore  BUGS.md  CHANGELOG.md  CLAUDE.md  LEARNING_NOTES.md  PROJECT_HISTORY.md  README.md  config.example.yaml  config.yaml  production-rag-build-prompt.md  pyproject.toml
.agent/workflows/: audit.md  build.md  closeout.md  plan.md
.github/workflows/: cheap-gate.yml  nightly-eval.yml
data/index/: chunk_metadata.json
docs/: eval-report.md
docs/plans/: 2026-07-10-ask-my-docs-design.md  2026-07-11-ask-my-docs-block2-retrieval-plan.md  2026-07-11-ask-my-docs-implementation-plan.md  2026-07-13-ask-my-docs-block3-rerank-plan.md  2026-07-13-ask-my-docs-block4-generation-plan.md  2026-07-14-ask-my-docs-block5-citations-plan.md  2026-07-14-ask-my-docs-block6-eval-plan.md  2026-07-15-ask-my-docs-block7-observability-plan.md  2026-07-16-ask-my-docs-block8-cli-ci-plan.md  2026-07-17-ask-my-docs-block9-portfolio-plan.md  2026-07-21-ask-my-docs-block10-chat-interface-plan.md  2026-07-21-ask-my-docs-block11-chat-ux-fixes-plan.md
eval/baselines/: 20260714T151052Z_dfac1522.json  20260717T095425Z_3c6a14e9.json  20260718T091928Z_f9eedb70.json
eval/golden/: questions.yaml
prompts/: answer_v1.md  answer_v2.md  judge_v1.md  relevance_v1.md  verify_v1.md
src/app/: main.py  paths.py  streamlit_app.py
src/citations/: pipeline.py  prompt.py  schema.py  verify.py
src/config/: settings.py
src/eval/: baseline.py  cache.py  judge.py  llm_call.py  pipeline.py  relevance.py  retrieval_metrics.py  schema.py
src/generate/: client.py  pipeline.py  prompt.py  schema.py
src/ingest/: bm25_index.py  chunk_id.py  chunk_metadata.py  chunker.py  figures.py  headers.py  models.py  page_labels.py  (+3 more)
tests/: conftest.py
(+58 files in other folders)
