[project]
name = "ask-my-docs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "bm25s>=0.3.9",
    "lancedb>=0.34.0",
    "langfuse>=4.14.0",
    "pydantic>=2.13.4",
    "pydantic-settings[yaml]>=2.14.2",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
    "tiktoken>=0.13.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["slow: local-model tests, skip with -m 'not slow' for the fast dev loop"]
