[project]
name = "ask-my-docs"
version = "0.1.0"
description = "Production-shaped RAG over the FAA Airplane Flying Handbook -- hybrid retrieval, reranking, cited generation, eval-gated CI, Langfuse observability."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.116.0",
    "bm25s>=0.3.9",
    "lancedb>=0.34.0",
    "langfuse>=4.14.0",
    "pydantic>=2.13.4",
    "pydantic-settings[yaml]>=2.14.2",
    "pymupdf>=1.28.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.38",
    "tiktoken>=0.13.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
markers = [
    "slow: local-model tests, skip with -m 'not slow' for the fast dev loop",
    "live_api: hits the real Anthropic API and costs money; skip by default, run with RUN_LIVE_API_TESTS=1",
    "live_langfuse: hits a real Langfuse Cloud project, skip by default, run with RUN_LIVE_LANGFUSE_TESTS=1",
]
